<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commentMainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:id="@+id/commentRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:contentDescription="@string/comment_recycler_view_desc"
        android:padding="8dp"
        android:baselineAligned="false">


        <LinearLayout
            android:id="@+id/postRecyclerItemTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/commentRecyclerItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit " />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/commentPostedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/posted_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/commentPostedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_null" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/commentVoteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:gravity="end"
            android:orientation="vertical">

            <Button
                android:id="@+id/commentUpvoteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/value_plus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/commentVoteScoreText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/value_zero" />

            <Button
                android:id="@+id/commentDownvoteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/value_minus"
                android:textSize="24sp"
                app:iconPadding="0dp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/commentSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>