<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worldFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.WorldFragment">

    <TextView
        android:id="@+id/emptyPostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_world_posts_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/postPullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addPostEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/post_recycler_view_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/recycler_view_post" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/attachButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:contentDescription="@string/attach_button_desc"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:icon="@android:drawable/ic_menu_camera"
        app:iconPadding="0dp"
        app:iconTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addPostEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="Text for the post"
        android:ems="16"
        android:hint="@string/add_post_placeholder"
        android:inputType="textShortMessage|textLongMessage|textAutoCorrect|none|textMultiLine|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendPostButton"
        app:layout_constraintStart_toEndOf="@+id/attachButton" />

    <Button
        android:id="@+id/sendPostButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:icon="@android:drawable/ic_menu_send"
        app:iconPadding="0dp"
        app:iconTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>