<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commentFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CommentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/commentAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Disqs.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@id/commentedPostRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/commentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/comment_title"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/emptyCommentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_comments_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentedPostRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/commentPullToRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentAppBar"
        tools:itemCount="1"
        tools:listitem="@layout/recycler_view_post" />

    <View
        android:id="@+id/commentPostSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/commentPullToRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentedPostRecyclerView" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/commentPullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addCommentEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commentedPostRecyclerView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            tools:listitem="@layout/recycler_view_comment" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/commentBackButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:contentDescription="@string/comment_back_button_desc"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconPadding="0dp"
        app:iconTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addCommentEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addCommentEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="Text for the post"
        android:ems="16"
        android:hint="@string/add_comment_placeholder"
        android:inputType="textShortMessage|textLongMessage|textAutoCorrect|none|textMultiLine|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sendCommentButton"
        app:layout_constraintStart_toEndOf="@id/commentBackButton" />

    <Button
        android:id="@+id/sendCommentButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:contentDescription="@string/add_comment_button_desc"
        app:icon="@android:drawable/ic_menu_send"
        app:iconPadding="0dp"
        app:iconTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>